refactor(core): improve code maintainability and fix User entity